k8s/captcha/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: captcha-api
  namespace: catchap
  labels:
    app.kubernetes.io/name: captcha
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: captcha
  ports:
    - name: http
      port: 8000
      targetPort: http
